polish: Sheep Shearer (#2219)
* sheep shearer refactor: modernize

* refactor: reformat

* Define lumbridge south staircase in QHObjectID

* feat: add function to create widget highlight multiskill-by-id

* polish(Sheep Shearer): Gameval, use new convenience-functions, add final step

Previously, if the user turned in 19 balls of wool, the helper would close.

---------

Co-authored-by: Zoinkwiz <zoinkwiz@hotmail.co.uk>