@@ -29,68 +29,68 @@ import com.questhelper.questhelpers.BasicQuestHelper;
 import com.questhelper.requirements.ManualRequirement;
 import com.questhelper.requirements.Requirement;
 import com.questhelper.requirements.item.ItemRequirement;
+import static com.questhelper.requirements.util.LogicHelper.and;
+import static com.questhelper.requirements.util.LogicHelper.nor;
+import static com.questhelper.requirements.util.LogicHelper.or;
 import com.questhelper.requirements.zone.Zone;
 import com.questhelper.requirements.zone.ZoneRequirement;
 import com.questhelper.rewards.ExperienceReward;
 import com.questhelper.rewards.ItemReward;
 import com.questhelper.rewards.QuestPointReward;
-import com.questhelper.steps.*;
-import net.runelite.api.InventoryID;
-import net.runelite.api.ItemContainer;
+import com.questhelper.steps.ConditionalStep;
+import com.questhelper.steps.ItemStep;
+import com.questhelper.steps.NpcStep;
+import com.questhelper.steps.ObjectStep;
+import com.questhelper.steps.QuestStep;
+import com.questhelper.steps.widget.WidgetHighlight;
+import com.questhelper.util.QHObjectID;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.stream.IntStream;
 import net.runelite.api.Skill;
 import net.runelite.api.coords.WorldPoint;
 import net.runelite.api.events.ItemContainerChanged;
+import net.runelite.api.gameval.InventoryID;
 import net.runelite.api.gameval.ItemID;
 import net.runelite.api.gameval.NpcID;
 import net.runelite.api.gameval.ObjectID;
+import net.runelite.api.gameval.VarPlayerID;
 import net.runelite.client.eventbus.Subscribe;
-
-import java.util.*;
-import java.util.stream.IntStream;
-
-import static com.questhelper.requirements.util.LogicHelper.*;
 
 public class SheepShearer extends BasicQuestHelper
 {
-	//Items Required
-	ItemRequirement ballOfWool, shears, woolOrBalls, onlyWool, totalWoolNeeded, totalBallsNeeded;
+	// Required items
+	ItemRequirement ballOfWool;
+	ItemRequirement shears;
+	ItemRequirement woolOrBalls;
+	ItemRequirement onlyWool;
+	ItemRequirement totalWoolNeeded;
+	ItemRequirement totalBallsNeeded;
 
-	QuestStep startStep, getSheers, climbStairsUp, climbStairsDown, spinBalls, turnInBalls;
-
-	NpcStep shearSheep;
-
+	// Zones
 	Zone castleSecond;
 
+	// Miscellaneous requirements
 	Requirement inCastleSecond;
-
+	// TODO: We should be able to use a EmptyInvSlot requirement here
 	ManualRequirement skipIfFullInventory;
 
-	int woolNeeded;
+	NpcStep startStep;
+	ItemStep getSheers;
+	NpcStep shearSheep;
+	ObjectStep climbStairsUp;
+	ObjectStep climbStairsDown;
+	ObjectStep spinBalls;
+	NpcStep turnInBalls;
+
+	int woolNeeded = 20;
 
 	@Override
-	public Map<Integer, QuestStep> loadSteps()
+	protected void setupZones()
 	{
-		initializeRequirements();
-		setupConditions();
-		setupSteps();
-
-		Map<Integer, QuestStep> steps = new HashMap<>();
-
-		// If you have all the wool you need, OR you have filled your inventory with wool
-		Requirement hasAllWoolOrFullInv = or(totalWoolNeeded, and(woolOrBalls, skipIfFullInventory));
-		// If you have all the balls needed, OR you've made all the wool you had in your inventory into balls of wool
-		Requirement hasAllBallsOrFullInv = or(totalBallsNeeded, and(nor(onlyWool), ballOfWool));
-		ConditionalStep craftingBalls = new ConditionalStep(this, getSheers);
-		craftingBalls.addStep(and(hasAllBallsOrFullInv, inCastleSecond), climbStairsDown);
-		craftingBalls.addStep(hasAllBallsOrFullInv, turnInBalls);
-		craftingBalls.addStep(and(hasAllWoolOrFullInv, inCastleSecond), spinBalls);
-		craftingBalls.addStep(hasAllWoolOrFullInv, climbStairsUp);
-		craftingBalls.addStep(shears, shearSheep);
-
-		steps.put(0, startStep);
-		IntStream.range(1, 20).forEach(i -> steps.put(i, craftingBalls));
-
-		return steps;
+		castleSecond = new Zone(new WorldPoint(3200, 3232, 1), new WorldPoint(3220, 3205, 1));
 	}
 
 	@Override
@@ -103,27 +103,20 @@ public class SheepShearer extends BasicQuestHelper
 		woolOrBalls.addAlternates(ItemID.BALL_OF_WOOL);
 		onlyWool = new ItemRequirement("Wool", ItemID.WOOL);
 
-		woolNeeded = client.getVarpValue(179) > 1 ? 21 - client.getVarpValue(179) : 20;
-		totalWoolNeeded = woolOrBalls.quantity(woolNeeded);
-		totalBallsNeeded = ballOfWool.quantity(woolNeeded);
-	}
+		totalWoolNeeded = woolOrBalls.quantity(20);
+		totalBallsNeeded = ballOfWool.quantity(20);
 
-	@Override
-	protected void setupZones()
-	{
-		castleSecond = new Zone(new WorldPoint(3200, 3232, 1), new WorldPoint(3220, 3205, 1));
-	}
-
-	public void setupConditions()
-	{
 		inCastleSecond = new ZoneRequirement(castleSecond);
 		skipIfFullInventory = new ManualRequirement();
 
-		ItemContainer inventory = client.getItemContainer(InventoryID.INVENTORY);
-		if (inventory == null) return;
+		var inventory = client.getItemContainer(InventoryID.INV);
+		if (inventory != null)
+		{
+			int itemsInInventory = inventory.count();
+			skipIfFullInventory.setShouldPass(itemsInInventory == 28);
+		}
 
-		int itemsInInventory = inventory.count();
-		skipIfFullInventory.setShouldPass(itemsInInventory == 28);
+		updateWoolNeeded();
 	}
 
 	public void setupSteps()
@@ -134,48 +127,81 @@ public class SheepShearer extends BasicQuestHelper
 		getSheers = new ItemStep(this, new WorldPoint(3190, 3273, 0),
 			"Pickup the shears in Fred's house.", shears);
 		shearSheep = new NpcStep(this, NpcID.SHEEPUNSHEERED3G, new WorldPoint(3201, 3268, 0),
-			"Shear " + woolNeeded + " sheep in the nearby field.", true, shears);
+			"Shear sheep in the nearby field.", true, shears, totalWoolNeeded);
 		shearSheep.addAlternateNpcs(NpcID.SHEEPUNSHEERED3, NpcID.SHEEPUNSHEERED3W, NpcID.SHEEPUNSHEERED, NpcID.SHEEPUNSHEEREDG, NpcID.SHEEPUNSHEERED3, NpcID.SHEEPUNSHEEREDW);
-		climbStairsUp = new ObjectStep(this, ObjectID.SPIRALSTAIRS, new WorldPoint(3204, 3207, 0),
-			"Climb the staircase in the Lumbridge Castle to spin the wool into balls of wool.", totalWoolNeeded);
+		climbStairsUp = new ObjectStep(this, QHObjectID.LUMBRIDGE_CASTLE_F0_SOUTH_STAIRCASE, new WorldPoint(3204, 3207, 0),
+			"Climb the staircase in the Lumbridge Castle to spin the wool in your inventory into balls of wool.", totalWoolNeeded);
 		spinBalls = new ObjectStep(this, ObjectID.SPINNINGWHEEL, new WorldPoint(3209, 3212, 1),
 			"Spin your wool into balls.", totalWoolNeeded);
-		spinBalls.addWidgetHighlight(270, 14);
+		spinBalls.addWidgetHighlight(WidgetHighlight.createMultiskillByItemId(ItemID.BALL_OF_WOOL));
 		climbStairsDown = new ObjectStep(this, ObjectID.SPIRALSTAIRSMIDDLE, new WorldPoint(3204, 3207, 1),
 			"Climb down the staircase.", totalBallsNeeded);
 		climbStairsDown.addDialogSteps("Climb down the stairs.");
 		turnInBalls = new NpcStep(this, NpcID.FRED_THE_FARMER, new WorldPoint(3190, 3273, 0),
-			"Bring Fred the Farmer north of Lumbridge " + woolNeeded + " balls of wool (UNNOTED) to finish the quest. If you only have some of the balls needed, you can still deposit them with him.",
+			"Bring Fred the Farmer north of Lumbridge your balls of wool (UNNOTED) to progress the quest. If you only have some of the balls needed, you can still deposit them with him.",
 			totalBallsNeeded);
 		turnInBalls.addDialogSteps("I need to talk to you about shearing these sheep!");
+	}
+
+	@Override
+	public Map<Integer, QuestStep> loadSteps()
+	{
+		initializeRequirements();
+		setupSteps();
+
+		var steps = new HashMap<Integer, QuestStep>();
+
+		// If you have all the wool you need, OR you have filled your inventory with wool
+		var hasAllWoolOrFullInv = or(totalWoolNeeded, and(woolOrBalls, skipIfFullInventory));
+		// If you have all the balls needed, OR you've made all the wool you had in your inventory into balls of wool
+		var hasAllBallsOrFullInv = or(totalBallsNeeded, and(nor(onlyWool), ballOfWool));
+		var craftingBalls = new ConditionalStep(this, getSheers);
+		craftingBalls.addStep(and(hasAllBallsOrFullInv, inCastleSecond), climbStairsDown);
+		craftingBalls.addStep(hasAllBallsOrFullInv, turnInBalls);
+		craftingBalls.addStep(and(hasAllWoolOrFullInv, inCastleSecond), spinBalls);
+		craftingBalls.addStep(hasAllWoolOrFullInv, climbStairsUp);
+		craftingBalls.addStep(shears, shearSheep);
+
+		steps.put(0, startStep);
+		IntStream.range(1, 21).forEach(i -> steps.put(i, craftingBalls));
+
+		return steps;
+	}
+
+	private void updateWoolNeeded()
+	{
+		var sheepVarp = client.getVarpValue(VarPlayerID.SHEEP);
+		var newWoolNeeded = sheepVarp > 1 ? 21 - sheepVarp : 20;
+		if (newWoolNeeded == woolNeeded)
+		{
+			return;
+		}
+		woolNeeded = newWoolNeeded;
+		totalBallsNeeded.setQuantity(woolNeeded);
+		totalWoolNeeded.setQuantity(woolNeeded);
 	}
 
 	@Subscribe
 	public void onItemContainerChanged(ItemContainerChanged event)
 	{
-		if (event.getContainerId() != InventoryID.INVENTORY.getId())
+		if (event.getContainerId() != InventoryID.INV)
 		{
 			return;
 		}
 
-		woolNeeded = client.getVarpValue(179) > 1 ? 21 - client.getVarpValue(179) : 20;
-		totalBallsNeeded.setQuantity(woolNeeded);
-		totalWoolNeeded.setQuantity(woolNeeded);
-
-		turnInBalls.setText("Bring Fred the Farmer north of Lumbridge " + woolNeeded + " balls of wool (UNNOTED) to finish the quest.");
-		shearSheep.setText("Shear " + woolNeeded + " sheep in the nearby field.");
-
 		// If inventory full
 		skipIfFullInventory.setShouldPass(event.getItemContainer().count() == 28);
+
+		updateWoolNeeded();
 	}
 
 	@Override
 	public List<ItemRequirement> getItemRequirements()
 	{
-		ArrayList<ItemRequirement> reqs = new ArrayList<>();
-		reqs.add(ballOfWool.quantity(20));
-		reqs.add(shears);
-		return reqs;
+		return List.of(
+			totalBallsNeeded,
+			shears
+		);
 	}
 
 	@Override
@@ -187,22 +213,36 @@ public class SheepShearer extends BasicQuestHelper
 	@Override
 	public List<ExperienceReward> getExperienceRewards()
 	{
-		return Collections.singletonList(new ExperienceReward(Skill.CRAFTING, 150));
+		return List.of(
+			new ExperienceReward(Skill.CRAFTING, 150)
+		);
 	}
 
 	@Override
 	public List<ItemReward> getItemRewards()
 	{
-		return Collections.singletonList(new ItemReward("Coins", ItemID.COINS, 60));
+		return List.of(
+			new ItemReward("Coins", ItemID.COINS, 60)
+		);
 	}
 
 	@Override
 	public List<PanelDetails> getPanels()
 	{
-		List<PanelDetails> allSteps = new ArrayList<>();
+		var steps = new ArrayList<PanelDetails>();
 
-		allSteps.add(new PanelDetails("Bring Fred Some Wool", Arrays.asList(startStep, getSheers, shearSheep,
-			climbStairsUp, spinBalls, climbStairsDown, turnInBalls), ballOfWool.quantity(20)));
-		return allSteps;
+		steps.add(new PanelDetails("Bring Fred Some Wool", List.of(
+			startStep,
+			getSheers,
+			shearSheep,
+			climbStairsUp,
+			spinBalls,
+			climbStairsDown,
+			turnInBalls
+		), List.of(
+			totalBallsNeeded
+		)));
+
+		return steps;
 	}
 }
